--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section class="main">
         <div>
             <h2>Hi, I'm Zaid and that's my website<br><span>TESTING</span></span></h2>
-            <h3>syber student at JU</h3>
+            <h3>Cyber Student at JU</h3>
             <a href="#Projects"class="main-btn"> Media</a> 
             <div class="social-icons">
                 <a href="https://www.instagram.com/pulpzezo/?next=%2F"><i class="fab fa-brands fa-instagram"></i></a>
